コメント追加

--- a/Hullien/Hullien/Data/GameParam/STG/index.html
+++ b/Hullien/Hullien/Data/GameParam/STG/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<!-- https://developer.mozilla.org/ja/docs/Games/Workflows/2D_Breakout_game_pure_JavaScript -->
@@ -26,8 +26,7 @@
 		<input type="number" id="dips"> 衝突時消えるか</br>
 		<button type="button" value="true" id="play">再生</button>
 		<button type="button" value="true" id="stop">停止</button>
-		<button type="button" value="true" id="save">追加</button>
-		<input type="file" id="file">
+		<button type="button" value="true" id="save">保存</button>
 		<canvas id="myCanvas" width="480" height="320"></canvas>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
