--- a/Hullien/Hullien/Data/GameParam/STG/index.html
+++ b/Hullien/Hullien/Data/GameParam/STG/index.html
@@ -9,13 +9,13 @@
     	canvas { background: #111111; display: block; margin: 0 auto; }
 	</style>
 	<style type="text/css">
-		.Main {
-			align-content: center;
-			background-size: 192vw 108vh;
-			background-image: url(Image/backGround.png);
-			animation: bgscroll 150s linear infinite;
-			height: 108vh;
-		}
+        .Main {
+            align-content: center;
+            background-size: 192vw auto;
+            background-image: url(Image/backGround.png);
+            animation: bgscroll 150s linear infinite;
+            height: auto;
+        }
 
 		@-webkit-keyframes bgscroll {
 			0% {
@@ -37,14 +37,14 @@
 			}
 		}
 
-		.Info {
-			padding: 10px;
-			background-color: #464646;
-			border: 3px solid #000000;
-			width: 1000px;
-			margin: 0 auto;
-			color:#e9e9e9;
-		}
+        .Info {
+            padding: 10px;
+            background-color: #464646;
+            border: 3px solid #000000;
+            width: 990px;
+            margin: 0 auto;
+            color: #e9e9e9;
+        }
 
 		.Info h3 {
 			border-bottom: 1px solid #000000;
@@ -132,6 +132,56 @@
 			padding: 1px;
 			background-color: darkslategray;
 		}
+
+        .anyEdit {
+            padding: 10px;
+            background-color: #464646;
+            border: 3px solid #000000;
+            width: 990px;
+            height: auto;
+            margin: 0 auto;
+        }
+
+        .anyEdit button {
+            margin-top: 3px;
+            margin-bottom: 10px;
+            width: auto;
+            height: 30px;
+            font-size: 15px;
+            border: 0;
+            cursor: pointer;
+        }
+
+        .anyEdit select {
+            background-color: darkgray;
+            margin-top: 20px;
+            width: auto;
+            height: 30px;
+            font-size: 15px;
+            border: 0;
+            display: block;
+        }
+
+        .anyEdit input {
+            margin-top: 0px;
+            background-color: darkgray;
+            height: 25px;
+            width: 250px;
+            font-size: 20px;
+            display:block;
+        }
+
+        .anyEdit table {
+            background-color: #464646;
+            height: 25px;
+            font-size: 20px;
+            padding: 1px;
+        }
+
+        .anyEdit tr {
+            background-color: darkgray;
+            padding: 2px;
+        }
 		
 	</style>
 	
@@ -139,54 +189,59 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 </head>
 <body>
-    <div class="Main">
-        <!-------- 説明 -------->
-        <div class="Info">
-            <h3>説明</h3>
-            <p><span>再生 </span> : 弾の軌道を確認できる</p>
-            <p><span>停止 </span> : 再生している弾の軌道を止める</p>
-            <p><span>データをコピー </span> : 入力したデータをコピーする</p>
-            <p><span></span> : コピーしたデータを"EnemyListTool.xlsm → BulletCreateシート"にペーストする</p>
-        </div>
-        <!-------- エディタ -------->
-        <div class="edit">
-            <!-------- 電卓の表示 -------->
-            <div class="Calculator">
-
-                <p> 角度計算用電卓 </p>
-                <input class="CalculatorOut" type="text" id="result">
-                <div>
-                    <input class="Number" type="button" value=" " onclick="edit(this)">
-                    <input class="Number" type="button" value=" " onclick="edit(this)">
-                    <input class="Number" type="button" value="C" onclick="edit(this)">
-                    <input class="Number" type="button" value="/" onclick="edit(this)">
-                </div>
-                <div>
-                    <input class="Number" type="button" value="7" onclick="edit(this)">
-                    <input class="Number" type="button" value="8" onclick="edit(this)">
-                    <input class="Number" type="button" value="9" onclick="edit(this)">
-                    <input class="Number" type="button" value="*" onclick="edit(this)">
-                </div>
-                <div>
-                    <input class="Number" type="button" value="4" onclick="edit(this)">
-                    <input class="Number" type="button" value="5" onclick="edit(this)">
-                    <input class="Number" type="button" value="6" onclick="edit(this)">
-                    <input class="Number" type="button" value="-" onclick="edit(this)">
-                </div>
-                <div>
-                    <input class="Number" type="button" value="1" onclick="edit(this)">
-                    <input class="Number" type="button" value="2" onclick="edit(this)">
-                    <input class="Number" type="button" value="3" onclick="edit(this)">
-                    <input class="Number" type="button" value="+" onclick="edit(this)">
-                </div>
-                <div>
-                    <input class="Number" type="button" value=" " onclick="edit(this)">
-                    <input class="Number" type="button" value="0" onclick="edit(this)">
-                    <input class="Number" type="button" value="." onclick="edit(this)">
-                    <input class="Number" type="button" value="=" onclick="calc()">
-                </div>
-                <script language="javascript" type="text/javascript">
-				var result = document.getElementById("result");
+	<audio preload="metadata" id="bgm" controls loop>
+		<source src="Sound/bonusBGM_2.wav" type="audio/wav">
+		<script language="javascript" type="text/javascript">
+			var bgm = document.getElementById("bgm");
+			bgm.volume = 0.05;
+		</script>
+	</audio>
+	<div class="Main">
+		<!-------- 説明 -------->
+		<div class="Info">
+			<h3>説明</h3>
+			<p><span>再生 </span> : 弾の軌道を確認できる</p>
+			<p><span>停止 </span> : 再生している弾の軌道を止める</p>
+			<p><span>データをコピー </span> : 入力したデータをコピーする</p>
+			<p><span></span> : コピーしたデータを"EnemyListTool.xlsm → BulletCreateシート"にペーストする</p>
+		</div>
+		<!-------- エディタ -------->
+		<div class="edit">
+			<!-------- 電卓の表示 -------->
+			<div class="Calculator">
+				<p> 角度計算用電卓 </p>
+				<input class="CalculatorOut" type="text" id="result">
+				<div>
+					<input class="Number" type="button" value=" " onclick="edit(this)">
+					<input class="Number" type="button" value=" " onclick="edit(this)">
+					<input class="Number" type="button" value="C" onclick="edit(this)">
+					<input class="Number" type="button" value="/" onclick="edit(this)">
+				</div>
+				<div>
+					<input class="Number" type="button" value="7" onclick="edit(this)">
+					<input class="Number" type="button" value="8" onclick="edit(this)">
+					<input class="Number" type="button" value="9" onclick="edit(this)">
+					<input class="Number" type="button" value="*" onclick="edit(this)">
+				</div>
+				<div>
+					<input class="Number" type="button" value="4" onclick="edit(this)">
+					<input class="Number" type="button" value="5" onclick="edit(this)">
+					<input class="Number" type="button" value="6" onclick="edit(this)">
+					<input class="Number" type="button" value="-" onclick="edit(this)">
+				</div>
+				<div>
+					<input class="Number" type="button" value="1" onclick="edit(this)">
+					<input class="Number" type="button" value="2" onclick="edit(this)">
+					<input class="Number" type="button" value="3" onclick="edit(this)">
+					<input class="Number" type="button" value="+" onclick="edit(this)">
+				</div>
+				<div>
+					<input class="Number" type="button" value=" " onclick="edit(this)">
+					<input class="Number" type="button" value="0" onclick="edit(this)">
+					<input class="Number" type="button" value="." onclick="edit(this)">
+					<input class="Number" type="button" value="=" onclick="calc()">
+				</div>
+				<script language="javascript" type="text/javascript">var result = document.getElementById("result");
 				function edit(elem) {
 					if (elem.value == " ") return;
 					if (elem.value == "C") {
@@ -197,68 +252,67 @@
 				}
 				function calc() {
 					result.value = new Function("return " + result.value)();
-				}
-                </script>
-            </div>
+				}</script>
+			</div>
+			<!-------- ボタンリストの表示 -------->
+			<div class="buttonList">
+				<span>番号</span>
+				<input type="number" id="index" step="1"><br>
+				<span>弾の速度</span>
+				<input type="number" id="bulletSpeed" step="0.01"><br>
+				<span>弾数</span>
+				<input type="number" id="bulletNum" step="1"><br>
+				<span>nWay数</span>
+				<input type="number" id="nWayNum" step="1"><br>
+				<span>角度</span>
+				<input type="number" id="angle" step="0.01"><br>
+				<span>nWay角度</span>
+				<input type="number" id="nWayAngle" step="0.01"><br>
+				<span>角度の加算加速度</span>
+				<input type="number" id="angleAddAccValue" step="0.01"><br>
+				<span>間隔</span>
+				<input type="number" id="intrval" step="0.01"><br>
+				<span>衝突時消えるか</span>
+				<input type="number" id="dips"><br>
+				<button type="button" value="true" id="play"><img src="Image/Play.bmp" alt="再生" /></button>
+				<button type="button" value="true" id="stop"><img src="Image/Stop.bmp" alt="停止" /></button>
+				<button type="button" value="true" id="copy"><img src="Image/Copy.bmp" alt="データをコピーする" /></button>
+			</div>
+			<!-------- キャンバスの表示 -------->
+			<div class="view">
+				<canvas id="myCanvas" width="480" height="320"></canvas>
+			</div>
+		</div>
+		<!-------- エディタ -------->
+		<div class="anyEdit">
+			<button type="button" value="true" id="anyPlay"><img src="Image/Play.bmp" alt="再生" /></button>
+			<button type="button" value="true" id="anyStop"><img src="Image/Stop.bmp" alt="停止" /></button>
+			<input type="text" id="addText">
+			<button type="button" value="true" id="addTableButton"><img src="Image/addTable.bmp" alt="データをコピーする" /></button>
+			<br />
+			<select id="tableNum"></select>
+			<button type="button" value="true" id="numClearTableButton"><img src="Image/selectClear.bmp" alt="データをコピーする" /></button>
+			<button type="button" value="true" id="clearTableButton"><img src="Image/AllClear.bmp" alt="データをコピーする" /></button>
 
-            <!-------- ボタンリストの表示 -------->
-            <div class="buttonList">
-                <span>番号</span>
-                <input type="number" id="index" step="1"><br>
-                <span>弾の速度</span>
-                <input type="number" id="bulletSpeed" step="0.01"><br>
-                <span>弾数</span>
-                <input type="number" id="bulletNum" step="1"><br>
-                <span>nWay数</span>
-                <input type="number" id="nWayNum" step="1"><br>
-                <span>角度</span>
-                <input type="number" id="angle" step="0.01"><br>
-                <span>nWay角度</span>
-                <input type="number" id="nWayAngle" step="0.01"><br>
-                <span>角度の加算加速度</span>
-                <input type="number" id="angleAddAccValue" step="0.01"><br>
-                <span>間隔</span>
-                <input type="number" id="intrval" step="0.01"><br>
-                <span>衝突時消えるか</span>
-                <input type="number" id="dips"><br>
-
-                <button type="button" value="true" id="play"><img src="Image/Play.bmp" alt="再生" /></button>
-                <button type="button" value="true" id="stop"><img src="Image/Stop.bmp" alt="停止" /></button>
-                <button type="button" value="true" id="copy"><img src="Image/Copy.bmp" alt="データをコピーする" /></button>
-            </div>
-
-            <!-------- キャンバスの表示 -------->
-            <div class="view">
-                <canvas id="myCanvas" width="480" height="320"></canvas>
-            </div>
-        </div>
-
-        <!-------- エディタ -------->
-        <div>
-
-            <input type="text" id="addText"><br>
-
-            <!-------- テーブルの表示 -------->
-            <table id="table" border="1">
-                <tr>
-                    <td>番号</td>
-                    <td>弾の速度</td>
-                    <td>弾数</td>
-                    <td>nWay数</td>
-                    <td>角度</td>
-                    <td>nWay角度</td>
-                    <td>角度の加算加速度</td>
-                    <td>間隔</td>
-                    <td>衝突時消えるか</td>
-                </tr>
-            </table>
-
-            <button type="button" value="true" id="addTable"><img src="Image/Copy.bmp" alt="データをコピーする" /></button>
-
-
-        </div>
-    </div>
-    <script type="text/javascript" src="index.js"></script>
+			<!-------- テーブルの表示 -------->
+			<table id="addTable" border="1">
+				<thead>
+					<tr>
+						<td>番号</td>
+						<td>弾の速度</td>
+						<td>弾数</td>
+						<td>nWay数</td>
+						<td>角度</td>
+						<td>nWay角度</td>
+						<td>角度の加算加速度</td>
+						<td>間隔</td>
+						<td>衝突時消えるか</td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+	</div>
+	<script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
